# chess

./: .gitignore  README.md
Chess/: CMakeLists.txt  GamePage.qml  GamePageForm.ui.qml  client.cpp  client.h  defines.h  engine.cpp  engine.h  engine_generate.cpp  engine_misc.cpp  engine_print.cpp  engine_pvtable.cpp  engine_search.cpp  engine_test.cpp  game.cpp  game.h  main.cpp  model.cpp  model.h  piece.cpp  piece.h  player.cpp  player.h  qml.qrc  spot.cpp  spot.h
Client/: CMakeLists.txt  qml.qrc
Client/QML/: GamePageForm.ui.qml  SettingsPageForm.qml
Client/engine/: bitboard.h  board.cpp  board.h  engine.cpp  engine.h  magic.h  misc.h  move.h
Client/include/: client.h  game.h  model.h  piece.h  player.h  spot.h
Client/qml/: ChatWindow.qml  Clock.qml  ColorSlider.qml  DrawWindow.qml  GamePage.qml  GamePageForm.ui.qml  MyButton.qml  OnlineWindow.qml  SettingsPage.qml  StartWindow.qml  main.qml
Client/src/: client.cpp  client.h  game.cpp  main.cpp  model.cpp  model.h  piece.cpp  player.cpp  spot.cpp  spot.h
Server/: CMakeLists.txt  main.cpp  server.cpp  server.h  server.ui
